# IAPDF-sparrow-donut

./: .gitignore  OSTIAtxt  origen.md
sparrow-data/: pyproject.toml  requirements.txt
sparrow-data/api/: set_env_vars.sh  start.sh
sparrow-data/docs/input/invoices/processed/ocr/: 1_pg1.json  1_pg2.json  2_pg1.json  2_pg2.json  2_pg3.json  2_pg4.json  2_pg5.json  2_pg6.json  3.json  4_pg1.json  4_pg2.json  4_pg3.json  Agujas4T.json  Biele04_pg1.json  Biele04_pg2.json  Biele05_pg1.json  Biele05_pg2.json  DIGI NOVIEMBRE_pg1.json  DIGI NOVIEMBRE_pg2.json  Digital04.json  Korta-06-2.json  Korta-06.json  Marzola04.json  dogital05.json  invoice_0.json  invoice_1.json  invoice_10.json  invoice_100.json  invoice_101.json  invoice_102.json  invoice_103.json  invoice_104.json  invoice_105.json  invoice_106.json  invoice_107.json  invoice_108.json  invoice_109.json  invoice_11.json  invoice_110.json  invoice_111.json  (+990 more)
sparrow-data/docs/input/invoices/processed/output/: 1_pg1.json  2_pg6.json  3.json  4_pg1.json  4_pg3.json  Agujas4T.json  Biele04_pg1.json  Biele04_pg2.json  Biele05_pg2.json  Digital04.json  Korta-06.json  invoice_0.json  invoice_101.json  invoice_102.json  invoice_103.json  invoice_104.json  invoice_107.json  invoice_110.json  invoice_113.json  invoice_114.json  invoice_115.json  invoice_116.json  invoice_119.json  invoice_124.json  invoice_126.json  invoice_127.json  invoice_128.json  invoice_13.json  invoice_131.json  invoice_133.json  invoice_134.json  invoice_136.json  invoice_137.json  invoice_138.json  invoice_14.json  invoice_140.json  invoice_142.json  (+462 more)
(+556 files in other folders)
