
[tool.poetry]
name = "sparrow-data"
version = "0.1.0"
description = "Data processing and analysis tools for Sparrow"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
#packages = [{include = "sparrow_data"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^1.3"
numpy = "^1.21"
matplotlib = "^3.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.9b0"
flake8 = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
